css/stylesheet.css
* {
    margin: 0;
    padding: 0;
}

body {
    box-sizing: border-box;
    height: auto;
    margin: auto;
    margin-top: 50px;
    max-width: 980px;
}

#logo{
    position: absolute;
    z-index: 1;
    display: flex;
    margin-left: 10px;
    margin-top: -20px;
}

#header1 {
    display: flex;
    height: 45px;
    font-family: Arial;
    font-size: 12px;
    align-items: center;
    justify-content: flex-end;
    background: #1b8e99;
}

#header1 li{
    padding: 0 10px;
    display: inline-flex;
    text-align: center;
    color: #fff;
}

#header1 a{
    text-decoration: none;
    color: inherit;
}

#select_green{
    background:#92c9ce;
    padding: 25px;
    z-index: 1;
}

#banner{
    position: relative;
    z-index: 0;
    display: flex;
    width: 100%;
    align-items: center;
}

#header2{
    display: flex;
    height: 45px;
    width: auto;
    font-family: Arial;
    font-size: 12px;
    align-items: center;
    justify-content: flex-start;
    background: #660000;
}

#header2 li{
    padding: 0 10px;
    color: #fff;
    text-align: center;
    display: inline-flex;
}

#header2 li:nth-of-type(2) {
    margin-bottom: 10px;
}

#header2 a{
    text-decoration: none;
    color: #fff;
}

a#select_red{
    color: #660000;
    background: #fff;
    padding: 25px;
    z-index: 1;
}

#title1{
    font-family: Arial;
    font-size: 18px;
    color: #660000;
    padding-top: 50px;
}

#divider1{
    border: none;
    border-top: 3px solid #660000;
    width: 850px;
    margin-bottom: 50px;
}

#drone_title{
    position: absolute;
    margin-top: -60px;
    display: flex;
    flex-direction: row-reverse;
    height: 77px;
    width: 125;
    margin-left: 850px;
}

#container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10px;
    flex-wrap: wrap;
}

#container h3{
    text-align: center;
}

#container p{
    font-family: tahoma;
    font-size: 13px;
}

.product1_3{
    display: relative;
    border: 2px solid #1b8e99;
    min-width: 290px;
}

.product1_3 h3{
    color: #1b8e99;
    background: #1b8e99;
    opacity: 0.1;;
}

.product1_3 p{
    color: #1b8e99;
    margin-bottom: 20px;
    padding: 10px;
}

.value1_3{
    font-family: tahoma;
    background: #1b8e99;
    padding: 20px;
    color: #fff;
}

.value1_3 p{
    color: #fff;
}

#product2{
    display: relative;
    border: 2px solid #660000;
    min-width: 290px;
}

#product2 h3{
    color: #660000;
    background: #660000;
    opacity: 0.1;
}

#product2 p{
    color: #660000;
    margin-bottom: 20px;
    padding: 10px;
}

#value2{
    font-family: tahoma;
    background: #660000;
    padding: 20px;
    color: #fff;
}

#value2 p{
    color: #fff;
}

.buy{
    position: absolute;
    margin-top: -70px;
    margin-left: 230px;
    display: inline-block;
    padding: 1px;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #fff;
}

#divider2{
    border: none;
    border-top: 15px solid;
    background: #000000;
    opacity: 0.7;
    margin-bottom: 50px;
}

#title2{
    color: #1b8e99;
}

#divider3{
    border: none;
    border-top: 3px solid #1b8e99;
    width: 850px;
    margin-bottom: 50px;
}

#drone_title2{
    position: absolute;
    margin-top: -60px;
    display: flex;
    flex-direction: row-reverse;
    margin-left: 850px;
}

#services{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 50px;
}

.services1_3{
    border: 1px solid #660000;
}

.services1_3 h3{
    color: #660000;
    margin-bottom: 10px;
    padding: 10px;
}

.services1_3 p{
    color: #660000;
    margin-bottom: 20px;
    font-family: 'Tahoma';
    font-size: 13px;
    padding: 10px;
}

.bottom_line1_3{
    border-bottom: 10px solid #660000;
    width: auto;
    height: auto;
}

#service2{
    border: 2px solid #1b8e99;
}

#service2 h3{
    color: #1b8e99;
    margin-bottom: 10px;
    padding: 10px;
}

#service2 p{
    color: #1b8e99;
    margin-bottom: 20px;
    font-family: 'Tahoma';
    font-size: 13px;
    padding: 10px;
}

#bottom_line2{
    margin-top: 50px;
    border-bottom: 10px solid #1b8e99;
    width: auto;
}

#drones_images{
    display: flex;
    flex-direction: row;
}

#drone1{
    margin-right: auto;
}

#drone2{
    margin-right: 115px;
}

#drone3{
    margin-right: 170px;
}

#footer1{
    align-items: center;
    background: #1b8e99;
    color: #fff;
    font-family: 'Tahoma';
    font-size: 14px;
    padding: 20px;
}

#footer1_logo{
    display: flex;
    position: absolute;
    margin-top: 15px;
}

#footer1_text{
    margin-left: 200px;
}

#footer2{
    text-align: right;
    align-items: center;
    background: #660000;
    color: #fff;
    font-family: 'Tahoma';
    font-size: 14px;
}

#footer2_teacher{
    display: flex;
    flex-direction: row-reverse;
    position: absolute;
    margin-top: -182px;
    margin-left: 880px;
}

#footer2_text{
    margin-right: 80px;
}

#header1 li,
#header2 li {
    display: inline-block;
    vertical-align: middle;
    margin: 0px;
}

